--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <button class="btn" id="btn_start">Play</button>
     </div>
     <div class="screen">
-        <h2>That your "favourit" Insect </h2>
+        <h2>What's your "favourit" Insect </h2>
         <ul class="insect_list">
             <li>
                 <button class="choice-insect-btn">
